# PyPSA-GB

./: .env  .gitignore  noxfile.py  pyproject.toml
PyPSA-GB/: LOPF.py  UC.py  add_P2G.py  allocate_to_zone.py  buses.py  data_reader_writer.py  distance_calculator.py  distribution.py  generators.py  interconnectors.py  lines.py  loads.py  mapping.py  marginal_costs.py  marine_scenarios.py  network_expansion.py  renewables.py  renewables_atlite.py  renewables_atlite_data.py  renewables_ninja_API.py  renewables_ninja_data_analysis.py  scotland_LOLP.py  scotland_network.py  snapshots.py  storage.py  two_step_dispatch.py  voronoi.py  zone_data_processing.py
PyPSA-GB/LOPF_data/: loads.csv
PyPSA-GB/utils/: cleaning.py  csv_splitter.py
data/LOLE/: bd_conversion_type.csv  breakdown_rate.csv
data/LOPF_data/: generators.csv
data/UC_data/: generators.csv
